--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "dev-test1",
   "description": "Angular UI test",
   "homepage": "https://github.com/vitaly-t/angular-test",
+  "scripts": {
+    "build": "gulp build"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/vitaly-t/angular-test.git"
@@ -12,6 +15,11 @@
     "npm": ">=2.15"
   },
   "devDependencies": {
-    "gulp": "~3.9.1"
+    "del": "~3.0.0",
+    "gulp": "~3.9.1",
+    "gulp-concat": "~2.6.1",
+    "gulp-uglify": "~3.0.0",
+    "gulp-sequence": "~0.4.6",
+    "gulp-less": "~3.3.2"
   }
 }
